--- a/web/html/index.html
+++ b/web/html/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="shortcut icon" href="image/favicon.ico" />
-    <link rel="bookmark" href="image/favicon.ico" />
-</head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"></head>
 <body>
 <div id="div"></div>
 </body>
